  - Protocol CTF correction:
    * Now it can deal with excluded views in the CTF and/or in the TS.
    * The same when entering with interpolated or not aligned TS.
    * The xf, defocus, and tlt files are generated inside each TS extra sub-directory.
 Developers:
  - Update the acquisition order in the CTFTomo objects (field added to that class in scipion-em-tomo v3.7.0).
  - Refactorization: avoid the excesive usage of getFirstItem.
  - File generation methods (most of them in utils) adapted to the CTF-TS intersection functionality.
  - Fixing sorted dictionary in ctf correction. How to access the defocus list in utils.py
3.3.0:
  - bugfix for import ctf, set missing defocus flag
  - move plugin-specific import CTF protocol to the core
  - add IMOD 4.11.25 version
  - Prevent viewers from locking the screen focus.
  - tilt series normalization: defines possible outputs
  - tomo preprocess: always outputs mrc file
3.2.4: bug fixed in odd-even management in CTF correction
3.2.3: declare requirements.txt in manifest
3.2.2:
  - Add requirements
3.2.1:
  - Fixing a bug with odd even in tomogram reconstruction
  - Tolerating errors in alignment
  - Making tomogram reconstruction error tolerant
  - Making tilt series alignment error tolerant
  - Adding possible outputs in xray eraser
  - Removing visible parameters with the intepolation is not applied
3.2.0:
  - add more possible outputs
  - fixing ctf after aretomo
  - make ctf auomatic estimation tolerant to errors
  - odd/even processing implemented
  - update FiducialModel
  - changes in protocols to save if landmark model has residual information
  - fix: interpolated flag is no set when correcting the CTFs
  - user-controllable binning for display in 3dmod: plugin variable -> IMOD_VIEWER_BINNING = 1
3.1.10:
  - fix DefocusTol param type for CTF correction protocol: must be integer
  - fix binning for other protocols
3.1.9:
  - fix binning for normalization protocols
  - fix excluded views parsing
3.1.8: